# pytest_report_autoname

./: README.md  setup.py
pytest_report_autoname/: plugin.py  pyproject.toml
pytest_report_autoname/tests/: conftest.py
